test/libsolidity/syntaxTests/license/license_unicode.sol
// SPDX-License-Identifier: ⡉⡊⡋⡌⡍⡎⡏⡐⡑⡒
contract C {}
// ----
// ParserError 5406: SPDX license identifier is ill-formatted. Please see https://spdx.org for more information.
// Warning 1878: SPDX license identifier not provided in source file. Before publishing, consider adding a comment containing "SPDX-License-Identifier: <SPDX-License>" to each source file. Use "SPDX-License-Identifier: UNLICENSED" for non-open-source code. Please see https://spdx.org for more information.
